--- a/Bear Red Graphite.css
+++ b/Bear Red Graphite.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    font-family: -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	font-size: 15px;
+	font-family: -apple-system, "Source Han Serif", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
