--- a/Bear Panic.css
+++ b/Bear Panic.css
@@ -16,6 +16,12 @@ body {
         color: #f9b637;
     }
 
+    .roam-center .bp3-button.bp3-small.block-ref-count-button {
+        color: #f6f7ed !important;
+        font-size: 0.9em;
+        opacity: 0.5;
+        cursor: pointer;
+    }
 
     /* Background color for the rest of body */
     body {
